Atualização, seleção e deleção de recurso.

--- a/node_mysql/public/css/styles.css
+++ b/node_mysql/public/css/styles.css
@@ -77,3 +77,13 @@ p {
 #book-page .container {
     text-align: center;
 }
+
+.actions {
+    margin-top: 1em;
+    display: flex;
+    justify-content: center;
+}
+
+.actions a {
+    margin-left: 1em;
+}
