--- a/node_mysql/views/books.handlebars
+++ b/node_mysql/views/books.handlebars
@@ -3,7 +3,7 @@
     <a href="/">Adicionar Livro</a>
     {{#each books}}
         <div>
-            #{{this.id}} - <span class="bold">{{this.title}}</span> - {{this.pagesqty}} páginas - <a href="/books/{{this.id}}">Editar</a>
+            #{{this.id}} - <span class="bold">{{this.title}}</span> - {{this.pagesqty}} páginas - <a href="/books/{{this.id}}">Ver</a>
         </div>
     {{/each}}
 </div>
