--- a/node_mysql/views/book.handlebars
+++ b/node_mysql/views/book.handlebars
@@ -3,5 +3,11 @@
     <div class="container">
         <h1>{{book.title}}</h1>
         <p>Este livro possui {{book.pagesqty}} páginas.</p>
+        <div class="actions">
+            <a href="/books/edit/{{book.id}}">Editar</a>
+            <form action="/books/remove/{{book.id}}" method="POST">
+                <input type="submit" value="Excluir">
+            </form>
+        </div>
     </div>
 </div>
